--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,14 @@
 .con02 .service .link{float: right; width: 1090px;  height: 134px;}
 .con02 .service .link ul {float: left;  width: 120px;  border: 1px solid #e1e1e1;  margin-right: 16px;  padding: 10px;}
 .con02 .service .link ul:last-child {margin-right: 0px;}
-
 .con02 .service .link ul li {text-align: center;}
 
-.con03{width: 1280px; height: 436px; margin: 0 auto; background: #888;}
+.con03{width: 1280px; height: 436px; margin: 0 auto; }
+.con03 .tit{padding-top: 40px; font-size: 28px; text-align: center; }
+.con03 .market_link{padding-top: 40px; width: 1080px; height: 300px; margin: 0 auto; background: #888;}
+
+
+
 .con04{width: 1280px; height: 1050px; margin: 0 auto; background: #777;}
 .footer_wrap{width: 1280px; height: 150px; margin: 0 auto; background: #888;}
 
