--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* 전체 레이아웃 */
 #header_top{width: 1920px; height: 40px; background: #fafafa; border-bottom: 1px solid #e1e1e1;}
 #header_nav{width: 1920px; height: 80px; background: #fff; border-bottom: 1px solid #e1e1e1;}
-#banner{ background:gray;}
+#banner{width: 1920px; height: 400px; }
 #content1{width: 1920px; height: 150px; background: #fff;}
 #content2{width: 1920px; height: 218px; background: #fff;}
 #content3{width: 1920px; height: 480px; background: #fafafa;}
@@ -11,6 +11,7 @@
 #site{width: 1920px; height: 150px; border-top: 1px solid #e1e1e1;}
 #footer_nav{ width: 1920px; height: 60px;  background: #fafafa; border-top: 1px solid #e1e1e1;}
 #footer_info{width: 1920px; height: 100px; border-top: 1px solid #e1e1e1;}
+#quick_menu{position: absolute; width: 120px; top: 128px; right:180px; z-index: 10; background: #fafafa;} 
 
 
 /* 컨테이터 */
@@ -18,30 +19,42 @@
 
 
 /* header */
-.top_left{float: left; }
-.top_left a{float: left; padding-right: 20px; line-height: 40px; color: #666;}
-.top_right{float: right; }
-.top_right a{float: left; padding-left: 20px; line-height: 40px; color: #666;}
+.top_left{float: left; border-left: 1px solid #e1e1e1;}
+.top_left li{float: left; padding: 0 16px; border-right: 1px solid #e1e1e1;}
+.top_left a{float: left; line-height: 40px; text-align: center; color: #666;}
+.top_right{float: right; border-left: 1px solid #e1e1e1; }
+.top_right li{float: left; padding:0 16px; border-right: 1px solid #e1e1e1;}
+.top_right a{ line-height: 40px; color: #666;}
+.top_right a img{text-align: center; vertical-align: middle;}
 
 .logo a{width: 200px; height: 40px; float:left;}
-.logo a img{padding-top: 20px; float:left;}
+.logo a img{width: 120px; padding-top: 20px; float:left;}
 .gnb{float:right;}
 .gnb ul{font-weight: bold; font-size: 18px; float: left; padding-left: 80px; line-height: 80px;}
 
 
-/* 배너 */
-.ban{position: relative; top: 0; width: 1920px; height: 400px; }
-.ban a.prev{position: absolute; top: 180px; left:200px; width: 20px; height: 40px;  background: url(../images/pre_arrow.png)}
-.ban a.next{position: absolute; top: 180px; right:200px; width: 20px; height: 40px; background: url(../images/next_arrow.png)}
-
-.ban ul{width: 1920px; height: 400px; overflow: hidden; }
-.ban ul li{float: left;}
-.ban ul li.ban_img1{text-align: left;}
-.ban ul li.ban_img2{text-align: center;}
-.ban ul li.ban_img3{text-align: right;}
+/* quick_menu */
+.box{position: fixed;}
+.box ul{width: 120px; background: #fff; border: 1px solid #e1e1e1;}
+.box ul li{display: block; border-bottom: 1px solid #e1e1e1; text-align: center; padding :10px;}
+.box ul li.quick_ban{width: 120px; height: 120px;  padding :0;}
+.box ul li.quick_top{height: 30px; border-bottom:0; padding :0; line-height: 14px;}
+.box ul li a{display: block;}
 
 
-/* 컨텐츠1 */
+/* banner */
+.ban {position: relative; width: 1920px; height: 400px; margin: 0 auto; }
+.ban .slick-prev {position: absolute; /*z-index: 1;*/ left:340px; top: 50%; transform: translateY(-50%); width: 20px; height: 40px; background: url(../images/pre_arrow.png) 1%; text-indent: -9990px;} 
+.ban .slick-next {position: absolute; /*z-index: 1; right:340px;*/ top: 50%; transform: translateY(-50%); width: 20px; height: 40px; background: url(../images/next_arrow.png) 1%; text-indent: -9990px;}
+.ban div {width: 1920px; height: 400px; margin: 0 auto;}
+.ban div > img{float: left; width: 1920px; height: 400px; }
+.ban .slick-dots {position: absolute;  text-align: center; bottom: 10px;}
+.ban .slick-dots li {display: inline-block; width: 16px; height: 16px; margin: 6px; }
+.ban .slick-dots li button {font-size: 0; line-height: 0; display: block; width: 16px; height: 16px; cursor: pointer; background: #cbcbcb; border-radius: 50%; list-style: none;}
+.ban .slick-dots li.slick-active button {background: #0056b7;} 
+
+
+/* content1 */
 .notice{ float: left; width: 920px; height: 110px; margin-top: 40px; }
 .notice .tit{ float: left; }
 .notice .tit p{font-weight: bold; font-size: 28px;}
@@ -59,7 +72,7 @@
 .info ul li span { font-weight: bold; font-size: 20px; color:#2a76cd ;}
 
 
-/* service */
+/* content2 */
 .service {width:1280px; padding-top: 60px; }
 .service .tit{float: left;}
 .service .tit p{font-weight: bold; font-size: 28px;}
@@ -69,6 +82,7 @@
 .service_link ul li {text-align: center;}
 
 
+/* content3 */
 .market_link{ width: 1280px; background: #fafafa;  margin: 0 auto;}
 .market_link .tit{ padding-top: 40px; }
 .market_link .tit p{ font-weight: bold; font-size: 28px; text-align: center;}
@@ -88,7 +102,8 @@
 .market_link .link .market_img ul .copy span{ padding-left: 16px;  font-size: 18px; font-weight: bold; line-height: 50px;}
 
 
-/* shopping */
+
+/* content4 */
 .shopping{width: 1080px; height: 852px; margin: 0 auto;}
 .shopping .tit{padding-top: 40px; }
 .shopping .tit p{font-weight: bold; font-size: 28px; text-align: center;}
@@ -114,7 +129,8 @@
 .shopping .shop_ban ul:nth-child(3){background:#555555 ;}
 
 
-/* .site_link */
+
+/* site_link */
 .site_link{width: 1280px;  height: 120px;  margin: 0 auto;  padding-top: 40px;}
 .site_link .pre_arrow{float: left; line-height: 80px; padding-top: 16px;}
 .site_link .next_arrow{float: right; line-height: 80px; padding-top: 16px;}
@@ -144,4 +160,4 @@
 .footer_wrap .footer_logo { float: left;}
 .footer_wrap .footer_copy { width: 920px; float: right; padding-left: 30px; }
 .footer_wrap .footer_copy span { float: left; padding-bottom: 40px; line-height: 24px; }
-.footer_wrap .footer_copy span button { border: 1px solid #e1e1e1; padding: 8px; margin-bottom: 8px; }
+.footer_wrap .footer_copy span button { border: 1px solid #e1e1e1; padding: 8px; margin-bottom: 8px; }f
