--- a/css/main.css
+++ b/css/main.css
@@ -160,4 +160,4 @@
 .footer_wrap .footer_logo { float: left;}
 .footer_wrap .footer_copy { width: 920px; float: right; padding-left: 30px; }
 .footer_wrap .footer_copy span { float: left; padding-bottom: 40px; line-height: 24px; }
-.footer_wrap .footer_copy span button { border: 1px solid #e1e1e1; padding: 8px; margin-bottom: 8px; }f
+.footer_wrap .footer_copy span button { border: 1px solid #e1e1e1; padding: 8px; margin-bottom: 8px; }
