--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@
 .market_link .link .market_img ul li{float: left;}
 .market_link .link .market_img ul li img{float: left; width: 328px; height: 250px; border: 1px solid #e1e1e1; border-bottom: 0;}
 
-.market_link .link .market_img ul .copy {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 328px; height: 50px; border: 1px solid #e1e1e1; }
+.market_link .link .market_img ul .copy {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 328px; height: 50px; border: 1px solid #e1e1e1; background: #fff; }
 .market_link .link .market_img ul .copy span{ padding-left: 16px;  font-size: 18px; font-weight: bold; line-height: 50px;}
 
 
