--- a/css/reset.css
+++ b/css/reset.css
@@ -43,3 +43,5 @@ button {border:0;}
 .mt40 {margin-top: 40px !important;}
 .mt45 {margin-top: 45px !important;}
 .mt50 {margin-top: 50px !important;}
+
+.hide{position: absolute; left: -5000px;}
