--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,11 @@
 
 /* 전체 레이아웃 */
 #header_top{width: 1920px; height: 40px; background: #fafafa; border-bottom: 1px solid #e1e1e1;}
-#header_nav{width: 1920px; height: 80px; background: #fff; border-bottom: 1px solid #e1e1e1;}
+#header_nav{position: relative; width: 1920px; height: 80px; background: #fff; border-bottom: 1px solid #e1e1e1;}
+
+/* #header_nav::after {position: absolute; z-index: 10; content: ''; width: 100%; height: 0px; background: #fff; transition: all 400ms;  border: 1x solid #e1e1e1;}
+#header_nav.on::after{height: 304px;} */
+
 #banner{width: 1920px; height: 400px; }
 #content1{width: 1920px; height: 150px; background: #fff;}
 #content2{width: 1920px; height: 218px; background: #fff;}
@@ -11,11 +15,12 @@
 #site{width: 1920px; height: 150px; border-top: 1px solid #e1e1e1;}
 #footer_nav{ width: 1920px; height: 60px;  background: #fafafa; border-top: 1px solid #e1e1e1;}
 #footer_info{width: 1920px; height: 100px; border-top: 1px solid #e1e1e1;}
-#quick_menu{position: absolute; width: 120px; top: 128px; right:180px; z-index: 10; background: #fafafa;} 
+
+#quick_menu{position: absolute; width: 120px; top: 128px; right:180px; z-index: 150; background: #fafafa;} 
 
 
 /* 컨테이터 */
-.container {width: 1280px; margin: 0 auto; height: inherit; }
+.container {width: 1200px; margin: 0 auto; height: inherit; }
 
 
 /* header */
@@ -27,10 +32,43 @@
 .top_right a{ line-height: 40px; color: #666;}
 .top_right a img{text-align: center; vertical-align: middle;}
 
-.logo a{width: 200px; height: 40px; float:left;}
-.logo a img{width: 120px; padding-top: 20px; float:left;}
-.gnb{float:right;}
-.gnb ul{font-weight: bold; font-size: 18px; float: left; padding-left: 80px; line-height: 80px;}
+
+.logo{position: absolute; height: 80px; }
+.logo a{display: block; width: 114px; height: 80px; color: transparent;  background: url(../images/main/lhfriends_logo.png) no-repeat center;}
+
+
+/* 대메뉴 */
+.lnb > ul {display: flex; justify-content: right; height: 80px; line-height: 80px; text-align: center;}
+.lnb > ul > li {width: 152px;}
+.lnb > ul > li:last-child {width: 240px;}
+.lnb > ul > li > a{display: inline-block; height: 80px; padding:0 40px;  font-weight: bold; font-size: 18px; }
+.lnb > ul > li > a span{position: relative;}
+.lnb > ul > li > a:hover{  color: #0056b7;}
+.lnb > ul > li > a:hover span:after{position: absolute; bottom: -10px; content: ""; display: block; width: 100%; height: 2px; background: #0056b7; }
+
+/* .lnb > ul > li > ul {display: none; text-align: center; position: absolute; z-index: 100; width: 152px; padding: 30px 0; }
+.lnb > ul > li > ul > li {display: block; width: 152px; height: 50px; line-height: 50px; text-align: center; }
+.lnb > ul > li > ul:nth-child(5){width: 240px;}
+.lnb > ul > li > ul > li > a{ color: #333; line-height: 50px;}
+.lnb > ul > li > ul > li:hover{background-color: #0056b7;}
+.lnb > ul > li > ul > li:hover a{color: #fff; } */
+
+
+/* 서브메뉴  */
+.all_menu{display: none; position: absolute; width: 1920px;  z-index: 999; background: #fff; border-top: 1px solid #e1e1e1;}
+.all_menu > div {width: 1200px;  margin: 0 auto; padding-top: 40px; }
+.all_menu > div > ul {display: inline-block;}
+.all_menu > div > ul.lnb_img{float: left; width: 220px; height: 264px;}
+.all_menu > div > ul.lnb_img >li{display: block; width: 220px; height: 264px;}
+.all_menu > div > ul.submenu{float: right; }
+.all_menu > div > ul.submenu > li {display: block;}
+.all_menu > div > ul.submenu > li.lnb_guide { width: 240px;}
+.all_menu > div > ul.submenu > li > a{display: block; width: 220px; height: 264px;}
+.all_menu > div > ul > li {float: left; width: 152px; text-align: center; }
+.all_menu > div > ul > li > ul > li{padding: 8px 20px;}
+.all_menu > div > ul > li > ul > li:hover{background: #0056b7; }
+.all_menu > div > ul > li > ul > li:hover a{color: #fff;}
+
 
 
 /* quick_menu */
@@ -43,9 +81,9 @@
 
 
 /* banner */
-.ban {position: relative; width: 1920px; height: 400px; margin: 0 auto; }
-.ban .slick-prev {position: absolute; /*z-index: 1;*/ left:340px; top: 50%; transform: translateY(-50%); width: 20px; height: 40px; background: url(../images/pre_arrow.png) 1%; text-indent: -9990px;} 
-.ban .slick-next {position: absolute; /*z-index: 1; right:340px;*/ top: 50%; transform: translateY(-50%); width: 20px; height: 40px; background: url(../images/next_arrow.png) 1%; text-indent: -9990px;}
+.ban {position: absolute; width: 1920px; height: 400px; margin: 0 auto; }
+.ban .slick-prev {position: absolute; z-index: 1; left:340px; top: 50%; transform: translateY(-50%); width: 20px; height: 40px; background: url(../images/main/pre_arrow.png) 1%; text-indent: -9990px;} 
+.ban .slick-next {position: absolute; z-index: 1; right:340px; top: 50%; transform: translateY(-50%); width: 20px; height: 40px; background: url(../images/main/next_arrow.png) 1%; text-indent: -9990px;}
 .ban div {width: 1920px; height: 400px; margin: 0 auto;}
 .ban div > img{float: left; width: 1920px; height: 400px; }
 .ban .slick-dots {position: absolute;  text-align: center; bottom: 10px;}
@@ -55,18 +93,18 @@
 
 
 /* content1 */
-.notice{ float: left; width: 920px; height: 110px; margin-top: 40px; }
+.notice{ float: left; width: 880px; height: 110px; margin-top: 40px; }
 .notice .tit{ float: left; }
 .notice .tit p{font-weight: bold; font-size: 28px;}
 .notice .tit button{ float: left; border: 1px solid #e1e1e1; margin-top: 20px; background-color: #fff; padding: 2px; }
 .notice .list{float: right;  width: 730px; height: 110px; border: 1px solid #e1e1e1;}
-.notice .list ul{ width: 690px; height: 94px; margin: 0 auto; padding-top: 16px;}
+.notice .list ul{ width: 690px; height: 94px; margin: 0 auto; padding: 16px;}
 .notice .list ul li {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; padding-bottom: 8px;}
 .notice .list ul li a{width: 400px; overflow: hidden; text-overflow: ellipsis; float: left;}
 .notice .list ul li span {float:right; color:#333; width: 70px;}
 
 .info{float: right; width: 284px;  height: 110px;  border: 1px solid #e1e1e1;  margin-top: 40px;}
-.info ul{width: 244px; height: 90px; margin: 0 auto; padding-top: 16px;}
+.info ul{width: 244px; height: 94px; margin: 0 auto; padding-top: 16px;}
 .info ul li {padding-bottom: 4px;}
 .info ul li p{display: block; font-weight: bold;  padding-bottom: 8px;}
 .info ul li span { font-weight: bold; font-size: 20px; color:#2a76cd ;}
@@ -88,8 +126,8 @@
 .market_link .tit p{ font-weight: bold; font-size: 28px; text-align: center;}
 
 .market_link .link{ position: relative; padding-top: 40px; }
-.market_link .link a.prev{position: absolute; left: 0; top: 160px ; width: 20px; height: 40px;  background: url(../images/pre_arrow.png) }
-.market_link .link a.next{position: absolute; right: 0; top: 160px ; width: 20px; height: 40px;  background: url(../images/next_arrow.png) }
+.market_link .link a.prev{position: absolute; left: 0; top: 160px ; width: 20px; height: 40px;  background: url(../images/main/pre_arrow.png) }
+.market_link .link a.next{position: absolute; right: 0; top: 160px ; width: 20px; height: 40px;  background: url(../images/main/next_arrow.png) }
 
 .market_link .link .market_img{width: 1080px; height: 300px; margin: 0 auto;}
 .market_link .link .market_img ul{float: left; width: 328px; height: 300px; margin-right:48px; }
@@ -141,18 +179,15 @@
 
 
 /* footer_link */
-.footer_link{ width: 1080px; height: 60px; margin: 0 auto; }
-.footer_link .footer_menu{float: left; padding-top: 16px; }
-.footer_link .footer_menu ul li{ float: left; padding: 0 8px; line-height: 24px; border-right: 1px solid #e1e1e1;  } 
-.footer_link .footer_menu ul li:last-child{border-right: 0;  } 
-.footer_link .footer_menu ul li a{padding: 0 8px; text-align: center; }
+.footer_menu{float: left; height: 60px;}
+.footer_menu ul{padding-top: 16px;}
+.footer_menu ul li{ float: left; padding: 0 8px;  border-right: 1px solid #e1e1e1;  } 
+.footer_menu ul li:last-child{border-right: 0;  } 
+.footer_menu ul li a{padding: 0 8px; text-align: center; }
 
 
-.footer_link .site{ float: right; border: 1px solid #e1e1e1; border-top:0;} 
-.footer_link .site .box{ float: left; width: 200px; height: 60px; padding: 0 16px; }
-.footer_link .site .box span{ float: left;  line-height: 60px;}
-.footer_link .site .box a{ float: right; }
-.footer_link .site .box a img{padding-top: 20px;}
+.site{float: right; width: 200px; height: 60px; line-height: 60px; text-indent: 20px; background: url(../images/main/down_arrow.png) no-repeat 164px center ; border: 1px solid #e1e1e1; border-top:0;} 
+
 
 
 /* footer_wrap */
